Intent: Reorganize theory notebooks for canonical flow Operators involved: [Emission|Reception|Coherence|Resonance|Transition] Affected invariants: [#1, #2, #8, #9] Key changes: - Renamed theory notebooks to canonical sequence with new Hilbert, operator, validator coverage - Embedded narrative sections and deterministic smoke code for norms, expectations, νf and ΔNFR traces - Executed lightweight demonstrations ensuring validator thresholds and unitary updates stay reproducible Expected risks/dissonances: Minimal; relies on numpy-backed routines emitting benign optional dependency warnings Metrics: Notebook smoke cells log coherence, νf projections, and ΔNFR increments Equivalence map: 01_structural_operators->01_hilbert_space, 02_phase_and_coupling->02_coherence_operator_C_hat, 03_coherence_metrics->03_frequency_operator_J_hat, 04_dissonance_and_bifurcation->04_validator_and_metrics

--- a/docs/theory/00_overview.ipynb
+++ b/docs/theory/00_overview.ipynb
@@ -2,61 +2,67 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3760173d",
+   "id": "bf152bc2",
    "metadata": {},
    "source": [
-    "# TNFR Mathematical Foundations Overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b4d74121",
-   "metadata": {},
-   "source": [
-    "## Objectives\n",
-    "- Summarize how TNFR encodes coherence in mathematical terms.\n",
-    "- Clarify the relationship between EPI, structural frequency νf, and ΔNFR.\n",
-    "- Provide navigation tips for the remaining notebooks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "84be7643",
-   "metadata": {},
-   "source": [
-    "## Dependencies\n",
-    "- `numpy`\n",
-    "- `tnfr`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bfa00e08",
-   "metadata": {},
-   "source": [
-    "## TNFR Context\n",
-    "The TNFR engine models coherence through structured transformations operating on Primary Information Structures (EPIs).\n",
+    "# TNFR overview\n",
     "\n",
-    "Structural frequency νf, expressed in Hz_str, quantifies how quickly an EPI reorganizes under the action of operators.\n",
+    "This notebook summarises the canonical moving parts of the Transcendent Nodal Fractal Resonance (TNFR) paradigm. The focus is on how the Primary Information Structure (EPI), structural frequency (νf) and the internal reorganiser ΔNFR weave together to sustain coherent nodes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cb11a37",
+   "metadata": {},
+   "source": [
+    "## Canonical invariants\n",
     "\n",
-    "ΔNFR serves as the intrinsic reorganization driver; its controlled modulation keeps coherence monotonic when desired."
+    "* **EPI coherence** — the node persists only if the Primary Information Structure tracks the ΔNFR-driven reorganisations.\n",
+    "* **Structural frequency νf** — expressed in Hz_str; it regulates how rapidly the node adapts to operator inputs.\n",
+    "* **Phase alignment** — operators must respect phase synchrony to keep resonance valid.\n",
+    "* **ΔNFR logging** — every structural trajectory must expose the ΔNFR contribution applied at each step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0da25765",
+   "metadata": {},
+   "source": [
+    "## Smoke check: scripted coherence evolution\n",
+    "\n",
+    "The example below instantiates a node, attaches a deterministic ΔNFR hook and executes a short trajectory. The hook mirrors a minimal telemetry trace by keeping EPI, νf and the stored ΔNFR aligned after each operator."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "041c4535",
-   "metadata": {
-    "tags": [
-     "smoke-example"
-    ]
-   },
+   "id": "bc63b999",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from tnfr.mathematics import HilbertSpace\n",
-    "space = HilbertSpace(dimension=2)\n",
-    "vector = [1.0, 0.0]\n",
-    "print(space.is_normalized(vector))"
+    "from tnfr.constants import DNFR_PRIMARY, EPI_PRIMARY, THETA_PRIMARY, VF_PRIMARY\n",
+    "from tnfr.dynamics import set_delta_nfr_hook\n",
+    "from tnfr.structural import Coherence, Emission, Reception, Resonance, Transition, create_nfr, run_sequence\n",
+    "\n",
+    "G, node = create_nfr(\"overview-seed\", epi=0.72, vf=1.1, theta=0.05)\n",
+    "\n",
+    "def scripted_delta(graph):\n",
+    "    \"\"\"Deterministic ΔNFR hook used for documentation smoke checks.\"\"\"\n",
+    "    graph.nodes[node][DNFR_PRIMARY] = 0.01\n",
+    "    graph.nodes[node][EPI_PRIMARY] += 0.01\n",
+    "    graph.nodes[node][VF_PRIMARY] += 0.001\n",
+    "    graph.nodes[node][THETA_PRIMARY] += 0.002\n",
+    "\n",
+    "set_delta_nfr_hook(G, scripted_delta)\n",
+    "run_sequence(G, node, [Emission(), Reception(), Coherence(), Resonance(), Transition()])\n",
+    "\n",
+    "summary = {\n",
+    "    \"EPI\": round(G.nodes[node][EPI_PRIMARY], 4),\n",
+    "    \"νf\": round(G.nodes[node][VF_PRIMARY], 4),\n",
+    "    \"phase\": round(G.nodes[node][THETA_PRIMARY], 4),\n",
+    "    \"ΔNFR\": round(G.nodes[node][DNFR_PRIMARY], 4),\n",
+    "}\n",
+    "summary"
    ]
   }
  ],
