Intent: Scaffold documentation tree for phase-3 layout Operators involved: [Self-organization, Transition] Affected invariants: [] Key changes: - Redirect scaffolding script to docs/theory and add TODO placeholders. - Replace generated index and foundations markdown with phase-3 TODO scaffolds. - Remove legacy notebooks path and regenerate UTF-8 notebooks with TODO cells. Expected risks/dissonances: Minimal risk; placeholders reduce published guidance until content restored. Metrics: C(t), Si, νf, phase unaffected (documentation-only change) Equivalence map: N/A

--- a/docs/theory/01-structural-frequency.ipynb
+++ b/docs/theory/01-structural-frequency.ipynb
@@ -3,18 +3,18 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "id": "e7c821351cd449b0b45248e3c2f0c1ef",
+      "id": "921689c2f47d4ac3b7f8d8e42a1f72f5",
       "source": [
-        "# Sense index calibration\n",
+        "# Structural frequency primer\n",
         "\n",
-        "Stabilise Si measurements across nodes.\n"
+        "TODO: Outline the notebook narrative, learning goals, and TNFR invariants to cover.\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "id": "9b660e64caaf42cea6c2033a2e54e791",
+      "id": "3e517d30d3de495f90feddaff1ebe9bf",
       "outputs": [],
       "source": [
         "# TODO: implement walkthrough cells\n"
