--- a/docs/theory/02-phase-synchrony.ipynb
+++ b/docs/theory/02-phase-synchrony.ipynb
@@ -3,18 +3,18 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "id": "5c218b3a8c0d40638dc03d7908d1aefe",
+      "id": "4602723a8eb64ae7a0cfe6de7527a0f9",
       "source": [
         "# Phase synchrony lattices\n",
         "\n",
-        "Calibrate phase locks and coherence windows.\n"
+        "TODO: Outline the notebook narrative, learning goals, and TNFR invariants to cover.\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "id": "737f023f4b6e4fe5bbc4b200a07ad690",
+      "id": "023f5d34ec1448a2b9be76887de74bf6",
       "outputs": [],
       "source": [
         "# TODO: implement walkthrough cells\n"
