--- a/docs/theory/03-delta-nfr-gradients.ipynb
+++ b/docs/theory/03-delta-nfr-gradients.ipynb
@@ -3,18 +3,18 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "id": "27a91898bf1d4ca4adc7efdea3b8eeef",
+      "id": "ce6206526e864fcb84e5951b766929d5",
       "source": [
-        "# Recursivity cascades\n",
+        "# \u0394NFR gradient fields\n",
         "\n",
-        "Map nested EPIs without breaking fractality.\n"
+        "TODO: Outline the notebook narrative, learning goals, and TNFR invariants to cover.\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "id": "82d37b00ba6b4521ba6807027ca88e37",
+      "id": "bbd6c034ef9f41159fdd98c47ba5976c",
       "outputs": [],
       "source": [
         "# TODO: implement walkthrough cells\n"
