--- a/docs/theory/04-coherence-metrics.ipynb
+++ b/docs/theory/04-coherence-metrics.ipynb
@@ -3,18 +3,18 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "id": "b419e1c145fd4f689c79c3ca62769025",
+      "id": "c52602b0e1b742ee9a8f78740ad60d06",
       "source": [
-        "# Structural frequency primer\n",
+        "# Coherence metrics walkthrough\n",
         "\n",
-        "Set up \u0394NFR-friendly spectral scaffolds.\n"
+        "TODO: Outline the notebook narrative, learning goals, and TNFR invariants to cover.\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "id": "d7bafe8753044a0d899ad75b5c97ae74",
+      "id": "1811fe942f9b4884b748ab46294624c0",
       "outputs": [],
       "source": [
         "# TODO: implement walkthrough cells\n"
