--- a/docs/theory/05-sense-index.ipynb
+++ b/docs/theory/05-sense-index.ipynb
@@ -3,18 +3,18 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "id": "9ecdc86d1a4e47a78f3617defc56d073",
+      "id": "f50b345ca83c4c1f8fa76858d34d8837",
       "source": [
-        "# Coherence metrics walkthrough\n",
+        "# Sense index calibration\n",
         "\n",
-        "Compute C(t) and auxiliary metrics.\n"
+        "TODO: Outline the notebook narrative, learning goals, and TNFR invariants to cover.\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "id": "57a27b55cbcb4c0699988766814800ea",
+      "id": "5efc426110324463add2f2340900132f",
       "outputs": [],
       "source": [
         "# TODO: implement walkthrough cells\n"
