--- a/docs/theory/06-recursivity.ipynb
+++ b/docs/theory/06-recursivity.ipynb
@@ -3,18 +3,18 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "id": "e7872b326da64f0a945cfe9c9b052c38",
+      "id": "3dfbce55759f43a18ae31ed16b89eb7b",
       "source": [
-        "# \u0394NFR gradient fields\n",
+        "# Recursivity cascades\n",
         "\n",
-        "Track \u0394NFR modulation under canonical hooks.\n"
+        "TODO: Outline the notebook narrative, learning goals, and TNFR invariants to cover.\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "id": "f1e386bf7bf14e478dc4c4c139a92926",
+      "id": "6ccee369318f4f6eb88a2244849b3f47",
       "outputs": [],
       "source": [
         "# TODO: implement walkthrough cells\n"
