--- a/docs/theory/00_overview.ipynb
+++ b/docs/theory/00_overview.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# TNFR overview\n",
     "\n",
-    "This notebook summarises the canonical moving parts of the Transcendent Nodal Fractal Resonance (TNFR) paradigm. The focus is on how the Primary Information Structure (EPI), structural frequency (νf) and the internal reorganiser ΔNFR weave together to sustain coherent nodes."
+    "This notebook summarises the canonical moving parts of the TNFR (fractal resonant nature theory) paradigm. The focus is on how the Primary Information Structure (EPI), structural frequency (νf) and the internal reorganiser ΔNFR weave together to sustain coherent nodes."
    ]
   },
   {
