Intent: Strengthen canonical validation facade Operators involved: [Coherence|Coordination|Resonance] Affected invariants: [#1, #4, #8] Key changes: - Consolidated graph validator logic into tnfr.validation.runtime with shared ValidationOutcome contract. - Migrated spectral NFRValidator into tnfr.validation.spectral and exposed unified Validator protocol. - Updated CLI, dynamics, tests, and docs to consume the new validation facade with added structural coverage. Expected risks/dissonances: Circular imports between validation and mathematics mitigated via lazy re-exports; legacy APIs re-exported to preserve compatibility. Metrics: C(t), Si, νf, phase remain governed by existing runtime checks; validation outcomes now report clamp and normalization artifacts for audit. Equivalence map: validate_canon/apply_canonical_clamps re-exported from tnfr.validation.runtime; NFRValidator available via tnfr.validation and tnfr.mathematics.validators.

--- a/docs/theory/04_nfr_validator_and_metrics.ipynb
+++ b/docs/theory/04_nfr_validator_and_metrics.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "from tnfr.mathematics.operators import CoherenceOperator, FrequencyOperator\n",
     "from tnfr.mathematics.spaces import HilbertSpace\n",
-    "from tnfr.mathematics.validators import NFRValidator\n",
+    "from tnfr.validation.spectral import NFRValidator\n",
     "\n",
     "space = HilbertSpace(dimension=3)\n",
     "coherence_operator = CoherenceOperator([0.75, 0.6, 0.45])\n",
