Intent: Unify validation reporting API Operators involved: [Coherence, Resonance] Affected invariants: [#4, #7] Key changes: - Align Validator.report protocol with ValidationOutcome usage across runtime and spectral validators - Update tests, node validation flow, and documentation to consume the outcome-based reporter - Refresh stubs to reflect the canonical signature Expected risks/dissonances: Downstream consumers passing summaries must adapt to wrap or reuse ValidationOutcome objects Metrics: C(t) stable; νf unchanged; Si unaffected; phase logging untouched Equivalence map: Validator.report(summary) -> Validator.report(outcome)

--- a/docs/theory/04_nfr_validator_and_metrics.ipynb
+++ b/docs/theory/04_nfr_validator_and_metrics.ipynb
@@ -59,8 +59,10 @@
     "state = np.array([0.8, 0.45, 0.2], dtype=np.complex128)\n",
     "state = state / space.norm(state)\n",
     "\n",
-    "overall, summary = validator.validate_state(state)\n",
-    "report = validator.report(summary)\n",
+    "outcome = validator.validate(state)\n",
+    "overall = outcome.passed\n",
+    "summary = outcome.summary\n",
+    "report = validator.report(outcome)\n",
     "\n",
     "{\n",
     "    \"overall\": bool(overall),\n",
